# Stock_Crew

./: .env  .gitignore  README.md  agents.py  auth.py  config.py  main.py  pyproject.toml  tasks.py  test_tools.py
tests/: test_tools.py
tools/: __init__.py  browser_tools.py  calculator_tools.py  chart_tools.py  economic_tools.py  esg_tools.py  news_tools.py  political_tools.py  risk_tools.py  search_tools.py  sec_tools.py  social_media_tools.py  trading_tools.py
